fix(date-time-picker): spacing issues

--- a/packages/react/src/components/DateTimePicker/_date-time-picker.scss
+++ b/packages/react/src/components/DateTimePicker/_date-time-picker.scss
@@ -38,7 +38,6 @@
   }
 
   .#{$prefix}--number {
-    margin-right: $spacing-05;
     .#{$prefix}--number__input-wrapper {
       input {
         min-width: 8.5rem;
@@ -159,6 +158,10 @@
         .#{$iot-prefix}--date-time-picker__custom-wrapper {
           padding-top: 1rem;
           padding-bottom: 2rem;
+
+          .#{$prefix}--radio-button-wrapper:not(:last-of-type) {
+            margin-right: $spacing-06;
+          }
         }
 
         .#{$iot-prefix}--date-time-picker__fields-wrapper {
